hide sensitive info from API user responses
